fix burger-memu position on small screens

--- a/css/_component.scss
+++ b/css/_component.scss
@@ -134,6 +134,7 @@
 		border: 1.5px solid #C4C4C4;
 		box-sizing: border-box;
 		padding: 10px;
+		z-index: 10;
 	}
 
 	.burger__link {
@@ -182,7 +183,12 @@
 				// border: 1px solid red !important;
 			}
 		}
-
-
 	}
+
+	.burger {
+		.burger__menu {
+			right: 0;
+		}
+	}
+
 }
